--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1>Brigham Young University Idaho</h1>
       <img
-        src="https://www.byui.edu/images/service-sites/map-banner.jpg"
+        src="me.png"
         alt="BYUI Campus"
       />
       <p>
