--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       </nav>
     </header>
     <main>
-      <h1>Brigham Young University Idaho</h1>
+      <h1>Brigham Dean, Attending BYUI</h1>
       <img
         src="me.png"
-        alt="BYUI Campus"
+        alt="Pic_of_me"
       />
       <p>
-        BYU-Idaho is a comfortable place to learn and grow as a disciple of
-        Jesus Christ because students, faculty, and employees share a commitment
-        to live the gospel.
+        I was born and raised in Alaska and am continuing my education online
+        through BYUI.
+
       </p>
     </main>
     <footer><p>My Web Page 20XX ©</p></footer>
