--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
       <h1>Brigham Dean, Attending BYUI</h1>
       <img
-        src="me.png"
-        alt="Pic_of_me"
+        src="images/me.png"
+        alt="Hi Im Brigaham Dean"
       />
       <p>
         I was born and raised in Alaska and am continuing my education online
