--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,76 +12,39 @@
 
   <body>
     <header>
-      <h1>White Water Rafting Site Plan</h1>
-      <h2>Vern Wolfley</h2>
+      <h1>Mean Dean rafting</h1>
+      <h2>Brigs Dean</h2>
       <h2>WDD 130-A1</h2>
-      <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
     <main>
-      <!-- ------------------------Steps 2-5------------------------------ -->
       <hr />
       <h2>Overview</h2>
-      <h3>Purpose</h3>
-      <!-- change this -->
       <p>
-        Our goal at White Water Rafting is to inspire, educate, and enable all
-        levels of adventure seekers to the thrill of white water rafting. We aim
-        to provide a comprehensive platform that offers valuable insights,
-        expert guidance, and a community for rafting enthusiasts. Whether you're
-        a seasoned rafter or a first-timer, we're dedicated to equipping you
-        with the knowledge, resources, and excitement needed for an
-        unforgettable white water rafting experience.
+        We provide the craziest rafing experiences legally allowed in the state!
+      </p>
+      <h3>Purpose</h3>
+      <p>
+        At Mean Dean Rafting we Work tirelessly to provide an unforgettable experience be it from our river tours
+        or our willingness to push the boundries of what a tour company can legally do to provide the ultimate 
+        experiences for its customers.
       </p>
 
       <h3>Audience</h3>
-      <!-- change this -->
       <p>
-        Our target audience shares an aspiration to live a bold, experience-rich
-        life, and a love of nature. This customer demographic is typically
-        between 18 and 50 living in a moderate to comfortable financial
-        situation. Their interests lie in engaging in physical activities,
-        embracing the natural world, and exploring the great outdoors.
+        Our target audience are people looking to live on the edge and are willing to pay exopratent
+        amounts to make that happen no matter the risk of harm.
       </p>
-      <p>
-        They want more than just a vacation, they want an unforgettable
-        adventure that provides an escape from the routine and challenges them
-        in the process. These adventures seek to immerse themselves in the
-        thrill of the white water, connect with nature, and develop camaraderie
-        with fellow adventures. They desire experiences that leave a lasting
-        impact and stories to share with family and friends.
-      </p>
-      <p>
-        Despite their eagerness to embark on white water rafting adventure, they
-        struggle to find a streamlined, comprehensive, and reliable platform
-        that guides them through their perfect journey. They are looking for a
-        one-stop resource that provides detailed information about rafting
-        locations, equipment, safety measures, and trip planning. They want
-        personalized recommendations, and tailored suggestions for rafting trips
-        based on skill level, preferences, and location.
-      </p>
-      <p>
-        Our target audience predominantly accesses websites through mobile
-        devices and laptops, seeking quick and accessible information while on
-        the go. Thus, optimizing our website for mobile compatibility and
-        ensuring a seamless user experience across devices is crucial to
-        effectively cater to their needs and preferences.
-      </p>
-
       <hr />
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png"
+        src="images/logo.png"
         alt="Logo image"
       />
       <hr />
       <h2>Style Guide</h2>
-
-      <!-- ------------------------Steps 6-9------------------------------ -->
-
       <h3>Color Palette</h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
+
 
       <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
       <p>Palette URL:</p>
@@ -97,22 +60,17 @@
           <th>Secondary</th>
           <th>Accent 1</th>
           <th>Accent 2</th>
-          <!-- <th>Accent 3</th> -->
         </tr>
-        <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr>
           <td class="primary">#144266</td>
           <td class="secondary">#78C4D7</td>
           <td class="accent1">#03763D</td>
           <td class="accent2">#DDFCAD</td>
-          <!-- <td class="accent3">#86675B</td> -->
         </tr>
       </table>
 
-      <!-- ------------------------Steps 10-12------------------------------ -->
-
       <h3>Typography</h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
+      
 
       <h4>
         Heading Font: Palatino
