--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -44,15 +44,8 @@
       <hr />
       <h2>Style Guide</h2>
       <h3>Color Palette</h3>
-
-
-      <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
       <p>Palette URL:</p>
-      <a
-        href="https://coolors.co/ddfcad-86675b-03763d-144266-78c4d7"
-        target="_blank"
-        >https://coolors.co/ddfcad-86675b-03763d-144266-78c4d7</a
-      >
+      
 
       <table class="colors">
         <tr>
@@ -74,68 +67,24 @@
 
       <h4>
         Heading Font: Palatino
-        <!-- change this -->
       </h4>
       <h4>
         Paragraph Font: Trebuchet MS
-        <!-- change this -->
       </h4>
       <h3>Normal paragraph example</h3>
       <p>
-        The best Whitewater Rafting in Colorado, White Water Rafting Company
-        offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-        Springs. Since 1974, we have been family owned and operated, rafting the
-        Shoshone section of Glenwood Canyon and beyond.
+        The most extreme rafting experience in the state
       </p>
       <h3>Colored paragraph example</h3>
       <p class="colored">
-        Trips vary from mild and great for families, to trips exclusively for
-        physically fit and experienced rafters. No matter what type of river
-        adventures you are seeking, White Water Rafting Company can make it
-        happen for you.
-      </p>
+        Trips vary from extreme to so extreme it will probably be illegal
+        </p>
 
-      <!-- ------------------------Step 13------------------------------ -->
+        <img
+        src = "images/river.png"
+        alt = "one of our many extreme rivers"
 
-      <h3>Navigation</h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Contact Us</a>
-      </nav>
-      <hr />
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">
-          [Page2]
-          <!-- this page will have a name later -->
-        </div>
-        <div class="sm-page3">Contact Us</div>
-
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-      </div>
-      <hr />
-      <h2>Wireframes</h2>
-      <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
-
-      <h3>Home</h3>
-
-      <img
-        src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png"
-        alt="home page wireframe"
-      />
-
-      <h3>Rivers</h3>
-
-      <img
-      src="./images/wireframe-page2.png"
-      alt="page 2 wireframe"
-    />
-
+    
     </main>
   </body>
 </html>
