--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header>
       <nav
         <a href="byui.html">Home</a>
-        <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+        <a href="wwr/site-plan-rafting.html">Raft work</a>
         <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
       </nav>
