--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <h1>Brigham Dean, Attending BYUI</h1>
       <img
         src="images/me.png"
+        width "400"
+        height="500"
         alt="Hi Im Brigaham Dean"
       />
       <p>
