--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>WWR Site Plan</title>
+    <title>Mean Dean Site Plan</title>
     <link
       type="text/css"
       rel="stylesheet"
@@ -12,17 +12,18 @@
 
   <body>
     <header>
-      <h1>Mean Dean rafting</h1>
+      <h1>Mean Dean rafting Site Plan</h1>
       <h2>Brigs Dean</h2>
-      <h2>WDD 130-A1</h2>
+      <h2>WDD 130</h2>
     </header>
+    
     <main>
       <hr />
       <h2>Overview</h2>
       <p>
         We provide the craziest rafing experiences legally allowed in the state!
       </p>
-      <h3>Purpose</h3>
+      <h3></h3>
       <p>
         At Mean Dean Rafting we Work tirelessly to provide an unforgettable experience be it from our river tours
         or our willingness to push the boundries of what a tour company can legally do to provide the ultimate 
