--- a/index.html
+++ b/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>BYUI</title>
-  </head>
-  <body>
-    <header>
-      <nav
-        <a href="byui.html">Home</a>
-        <a href="wwr/site-plan-rafting.html">Raft work</a>
-        <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
-      </nav>
-    </header>
-    <main>
-      <h1>Brigham Dean, Attending BYUI</h1>
-      <img
-        src="images/me.png"
-        alt="Hi Im Brigaham Dean"
-        width "200"
-        height="300"
-      />
-      <p>
-        I was born and raised in Alaska and am continuing my education online
-        through BYUI.
+<html lang="en-US">
 
-      </p>
-    </main>
-    <footer><p>My Web Page 20XX ©</p></footer>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This page is the project of the WDD 130 course made by Ariel Antequiera">
+    <meta name="author" content="Ariel Antequiera">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <title>Ariel Antequiera | WDD 130</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/index.html">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Siteplan</a>
+            <a href="https://www.linkedin.com/in/arielantequiera/" target="_blank">Linkedin</a>
+            <a href="https://www.facebook.com/arielantequiera/" target="_blank">Facebook</a>
+        </nav>
+    </header>
+
+
+
+    <div class="grid">
+        <main>
+            <h1>Ariel Antequiera | WDD 130</h1>
+            <img src="./images/profile.jpg" alt="Ariel Antequiera profile pic" width="200">
+            <p>
+                Hello! My name is Ariel Antequiera and I am from Buenos Aires,
+                Argentina. I am a lawyer, and I hope soon also a software developer. I
+                keep trying to learn and improve everyday. Nowadays, I work for insurance companies and legal firms.
+                I am married since six years ago, and both (my wife and I) are members of the Church of Jesus Christ of
+                Latter-day Saints.
+            </p>
+            <br>
+
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng"
+                        target="_blank">Buenos Aires Argentina Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-city-center-argentina-temple?lang=eng"
+                        target="_blank">Buenos Aires City Center Argentina Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
+                        target="_blank">Nauvoo Illinois Temple</a></li>
+            </ul>
+        </main>
+
+        <aside class="box">
+            <h2>Buenos Aires</h2>
+            <img src="./images/buenosaires.jpg" alt="Buenos Aires - Argentina" width="200">
+            <p>
+                Buenos Aires is the capital city of Argentina. Is famous for their
+                beauty, french style and diversity. It has some landmarks like: The
+                Colon Theather, the obelisco (obelisk), the english tower, the
+                mechanical flower and others. It also has a great cultural and
+                entertainment life.
+            </p>
+        </aside>
+    </div>
+
+    <footer>
+        <p>
+            ©️ 2023 Ariel Antequiera - Building websites with <span class="heart">♡</span> from Buenos Aires,
+            Argentina, to the world.
+        </p>
+    </footer>
+</body>
+
+<!-- Last edition: Sep 18 2023 (week 02) -->
+
 </html>
