--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page is the project of the WDD 130 course made by Ariel Antequiera">
-    <meta name="author" content="Ariel Antequiera">
+    <meta name="description" content="This page is for BYUI WDD130 for Brigham Dean">
+    <meta name="author" content="Brigham Dean">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Ariel Antequiera | WDD 130</title>
+    <title>Brigs Dean | WDD 130</title>
 </head>
 
 <body>
@@ -15,9 +15,6 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/index.html">Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">Rafting Siteplan</a>
-            <a href="https://www.linkedin.com/in/arielantequiera/" target="_blank">Linkedin</a>
-            <a href="https://www.facebook.com/arielantequiera/" target="_blank">Facebook</a>
         </nav>
     </header>
 
