--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
 
     <div class="grid">
         <main>
-            <h1>Ariel Antequiera | WDD 130</h1>
-            <img src="./images/profile.jpg" alt="Ariel Antequiera profile pic" width="200">
+            <h1>Brigs Dean | WDD130</h1>
+            <img src="images/me.png" alt="Pic of me" width="200">
             <p>
-                Hello! My name is Ariel Antequiera and I am from Buenos Aires,
-                Argentina. I am a lawyer, and I hope soon also a software developer. I
-                keep trying to learn and improve everyday. Nowadays, I work for insurance companies and legal firms.
-                I am married since six years ago, and both (my wife and I) are members of the Church of Jesus Christ of
-                Latter-day Saints.
+                Hi I am Brigham Dean but most people just call me Brigs. I am from Palmer Alaska currently taking online college
+                classes through BYUI. I served a full time mission in the Las Vegas West mission.
             </p>
             <br>
 
