--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
                 Hi I am Brigham Dean but most people just call me Brigs. I am from Palmer Alaska currently taking online college
                 classes through BYUI. I served a full time mission in the Las Vegas West mission.
             </p>
+            <br>
+
+            <ul class="box">
+                <li><a href="https://www.byui.edu/"
+                        target="_blank">BYUI home page</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-city-center-argentina-temple?lang=eng"
+                        target="_blank">Buenos Aires City Center Argentina Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
+                        target="_blank">Nauvoo Illinois Temple</a></li>
+            </ul>
         </main>
 
         <aside class="box">
