--- a/index.html
+++ b/index.html
@@ -33,34 +33,23 @@
             <ul class="box">
                 <li><a href="https://www.byui.edu/"
                         target="_blank">BYUI home page</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-city-center-argentina-temple?lang=eng"
-                        target="_blank">Buenos Aires City Center Argentina Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
-                        target="_blank">Nauvoo Illinois Temple</a></li>
             </ul>
         </main>
 
         <aside class="box">
             <h2>Buenos Aires</h2>
-            <img src="./images/buenosaires.jpg" alt="Buenos Aires - Argentina" width="200">
+            <img src="images/map.png" alt="Mat-su valley on a map" width="200">
             <p>
-                Buenos Aires is the capital city of Argentina. Is famous for their
-                beauty, french style and diversity. It has some landmarks like: The
-                Colon Theather, the obelisco (obelisk), the english tower, the
-                mechanical flower and others. It also has a great cultural and
-                entertainment life.
+                Palmer Alaska is located in the Matsu Valley just north of Anchorage.
             </p>
         </aside>
     </div>
 
     <footer>
         <p>
-            ©️ 2023 Ariel Antequiera - Building websites with <span class="heart">♡</span> from Buenos Aires,
-            Argentina, to the world.
+            ©️ 2023 Brigs Dean learning at BYUI online from Palmer.
         </p>
     </footer>
 </body>
-
-<!-- Last edition: Sep 18 2023 (week 02) -->
-
+<!-- Had some fun redoing this now that i have a better grasp on what im doing  -->
 </html>
