--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </main>
 
         <aside class="box">
-            <h2>Buenos Aires</h2>
+            <h2>Mat-su Valley</h2>
             <img src="images/map.png" alt="Mat-su valley on a map" width="200">
             <p>
                 Palmer Alaska is located in the Matsu Valley just north of Anchorage.
