--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/index.html">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Website</a>
         </nav>
     </header>
 
@@ -51,5 +52,5 @@
         </p>
     </footer>
 </body>
-<!-- Had some fun redoing this now that i have a better grasp on what im doing  -->
+<!-- Had some fun redoing this now that i have a better grasp on what im doing May 11th 2024 -->
 </html>
