--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/anchorage-alaska-temple?lang=eng"
-                        target="_blank">Buenos Aires Argentina Temple</a></li>
+                        target="_blank">Anchorage Alaska Temple</a></li>
             <ul class="box">
                 <li><a href="https://www.byui.edu/"
                         target="_blank">BYUI home page</a></li>
