--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,14 +6,14 @@
     <meta name="description" content="The Rafting Site Plan includes th site purpose, the target audience, branding information, and a style guide for the course website project.">
     <meta name="author" content="Ariel Antequiera">
     <link rel="stylesheet" href="../wwr/styles/site-plan-rafting.css">
-    <title>Rafting Site Plan | Ariel Antequiera</title>
+    <title>Rafting Site Plan | Brigs Dean</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Whitewater Rafting Site Plan</h1>
-        <div>Ariel Antequiera</div>
+        <h1>Mean Dean Rafting</h1>
+        <div>Brigs Dean</div>
     </header>
 
     <main>
