--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/site-plan-rafting.html">Rafting Website</a>
+            <a href="https://facebook.com">Facebook</a>
+            <a href="https://linkedin.com">Linkedin</a>
         </nav>
     </header>
 
@@ -33,9 +35,10 @@
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/anchorage-alaska-temple?lang=eng"
                         target="_blank">Anchorage Alaska Temple</a></li>
-            <ul class="box">
-                <li><a href="https://www.byui.edu/"
-                        target="_blank">BYUI home page</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/las-vegas-nevada-temple?lang=eng"target="_blank">Las vegas temple</a></li>
+
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"target="_blank">Salt Lake temple</a></li>
+
             </ul>
         </main>
 
