--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Mat-su Valley</h2>
             <img src="images/map.png" alt="Mat-su valley on a map" width="200">
             <p>
-                Palmer Alaska is located in the Matsu Valley just north of Anchorage.
+                The town of Palmer is located in the Matsu Valley just north of Anchorage in the state of Alaska.
             </p>
         </aside>
     </div>
