--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="aboutHeader">
-        <img src="../wwr/images/logo.png" alt="Whitewater Rafting Site Logo" class="logo">
+        <img src="/images/logo.png" alt="Whitewater Rafting Site Logo" class="logo">
         <nav class="aboutNavbar">
             <a href="./index.html">Home</a>
             <a href="./about.html">About Us</a>
