--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Rafting Site Plan includes th site purpose, the target audience, branding information, and a style guide for the course website project.">
-    <meta name="author" content="Ariel Antequiera">
+    <meta name="author" content="Brigs Dean">
     <link rel="stylesheet" href="../wwr/styles/site-plan-rafting.css">
     <title>Rafting Site Plan | Brigs Dean</title>
 </head>
