--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -46,7 +46,8 @@
         <p></p>
         <h3>Navigation</h3>
         <nav>
-            <a href="https://brigsdean.github.io/wdd130/">Home</a>
+            <a href="https://brigsdean.github.io/wdd130/">Home test1</a>
+            <a href="index.html">Home test2</a>
             <a href="#">About Us</a>
             <a href="#">Trips</a>
             <a href="#">Contact Us</a>
