--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -37,9 +37,12 @@
         <h2>Style Guide</h2>
         
         <h3>Color Palette</h3>
-        <p></p>
+        <p>Palate URL : <a href="http://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd"target="_blank">https://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd</a></p>
         <h3>Typography</h3>
-        <h4>Headings Example Font</h4>
+
+        <h4>Heading Font: Roboto</h4>
+        
+        <h4>Paragraph Font : Roboto, Helvetica,sans-serif </h4>        <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
         <p></p>
         <h4>Colored Callout Example Font</h4>
@@ -62,7 +65,7 @@
     </main>
 
     <footer>
-        <p>©️ 2023 Ariel Antequiera - Rafting Site Document - WDD130</p>
+        <p>©️ 2024 Brigs Dean - Rafting Site Document - WDD130</p>
     </footer>
 
 </body>
