--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -44,9 +44,9 @@
         
         <h4>Paragraph Font : Roboto, Helvetica,sans-serif </h4>        <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
-        <p></p>
+        <p>test test TEST TEST Test</p>
         <h4>Colored Callout Example Font</h4>
-        <p></p>
+        <p>TEST TEST test test</p>
         <h3>Navigation</h3>
         <nav>
             <a href="https://brigsdean.github.io/wdd130/">Home Page</a>
@@ -54,7 +54,7 @@
             <a href="#">Trips</a>
             <a href="#">Contact Us</a>
         </nav>
-        
+        <!-- I wanna try and find a more appealing color pallete but i could not remember how to get the links for color pallets and its late-->
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
