--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -37,7 +37,7 @@
         <h2>Style Guide</h2>
         
         <h3>Color Palette</h3>
-        <p>Palate URL : <a href="http://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd"target="_blank">https://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd</a></p>
+        
         <h3>Typography</h3>
 
         <h4>Heading Font: Roboto</h4>
@@ -54,7 +54,7 @@
             <a href="#">Trips</a>
             <a href="#">Contact Us</a>
         </nav>
-        <!-- I wanna try and find a more appealing color pallete but i could not remember how to get the links for color pallets and its late-->
+        <!-- I wanna try and find a more appealing color pallete but i could not remember how to get the links for color pallets and its late and i have work-->
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
