--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,77 +1,135 @@
 <!DOCTYPE html>
-<html lang="en"US>
+<html lang="en-us">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Plan|Prayer Marangwanda</title>
-    <meta name="description"
-        content="This site plan will provide the blueprint and guides from which to design and develop the project">
-    <meta name="author" content="Prayer Marangwanda">
-    <link rel="stylesheet"href="styles/site-plan-rafting.css">
-    
+  <meta charset="utf-8" />
+  <title>Site Plan</title>
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
+
 <body>
-    <header>
-<h1>Rafting Site Plan</h1>
-<div>Prayer Marangwanda</div>
-    </header>
-    <main>
-<h2>Overview</h2>
-<h3>Purpose</h3>
+  <header>
+    <h1>Strong Dry Oar Rafting Site Plan</h1>
+    <h2>Trey Armstrong</h2>
+    <h2>WDD 130-2</h2>
+    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
+  </header>
+  <main>
+    <!-- ------------------------Steps 2-5------------------------------ -->
+    <hr />
+    <h2>Overview</h2>
+    <h3>Purpose</h3>
+    <p>Our purpose is to produce quality trips and service to ensure life-time experiences for the whole family. Our trained instructors and guides will give your family
+        the safest and funnest river experience to offer. For more advanced rafters, there are Whitewater rafting tours that will provide an invigorating challenge.
+        In all, we are an entertainment business to give customers the biggest bang for their buck while making memories for a lifetime. 
+    </p>
+    <!-- change this -->
 
-<p>The Purpose of this website is :</p>
+    <h3>Audience</h3>
+    <p>Target customers range from kids (12-17) to adults changing the difficulty based upon the experience of the rafter.
+        With our competitive pricing, people of all stable financial situations can enjoy our services who want to enjoy the 
+    great outdoors. They want to gain experiences and memories through the joys of rafting. Other needs that we don't provide 
+kayaking or other forms of water transportation/recreation. Our audience will be able to access our site through any device. </p>
+    <!-- change this -->
 
-<p>To anyone in good health from 6 years over and who wants to try something new and exciting.
-    To outdoor sports lovers ,people who wants to experience mountains and nature from different prospective.
+    <hr />
+    <h2>Branding</h2>
+    <h3>Website Logo</h3>
+    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
+    <img src="images/R.png" alt="Logo image" />
+    <hr />
+    <h2>Style Guide</h2>
 
-    Rafting is a way to connect with nature, so people must expect to paddle down the river and get to enjoy the 
-    breaking scenery, lush greeny , and wildlife alog the riverbanks, making it memorable experience.
-    Audience can access my site on any device of their choice.
-</p>
-<h2>Branding</h2>
-<h3>Website Logo </h3>
-<img src="image/sitelogo.jpg" alt="logo image" width="80px" height="80px">
+    <!-- ------------------------Steps 6-9------------------------------ -->
 
-<h2>Style Guide</h2>
-<h3>Color Palette</h3>
-Palate URL : <a href="http://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd"target="_blank">https://colors.co/9c89b8-f0a6ca-efc3e6-f0e6ef-b8bedd</a>
-<h3>Typography</h3>
+    <h3>Color Palette</h3>
+    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
-<h4>Heading Font: Roboto</h4>
+    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
+    <p>Palette URL:</p>
+    <a href="https://coolors.co/495867-577399-bdd5ea-f7f7ff-fe5f55"
+      target="_blank">https://coolors.co/495867-577399-bdd5ea-f7f7ff-fe5f55</a>
 
-<h4>Paragraph Font : Roboto, Helvetica,sans-serif </h4>
+    <table class="colors">
+      <tr>
+        <th>Primary</th>
+        <th>Secondary</th>
+        <th>Accent 1</th>
+        <th>Accent 2</th>
+      </tr>
+      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+      <tr>
+        <td class="primary">[#577399]</td>
+        <td class="secondary">[#BDD5EA]</td>
+        <td class="accent1">[#FE5F55]</td>
+        <td class="accent2">[#F7F7FF]</td>
+      </tr>
+    </table>
 
-<h3>Paragraph Example font</h3>
+    <!-- ------------------------Steps 10-12------------------------------ -->
 
-<p>Rafting and water rafting are outdoor entrtainment activities that use a boat or an unsinkable raft.
-    It has different difficulty levels according to the current of the water in which the sport is done.
-    It can be done solo but is more commonly done with groups and needs good teamwork to manage the water.
-</p>
-<h4>Colored Paragraph Example</h4>
+    <h3>Typography</h3>
+    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
-<p>The main goal is to maneuvur and navigate the raft through rapids or tabulant water , often times taking you over rocks and drops, without capsizing the raft.</p>
+    <h4>
+      Heading Font: Croissant One
+      <!-- change this -->
+    </h4>
+    <h4>
+      Paragraph Font: Oswald
+      <!-- change this -->
+    </h4>
+    <h3>Normal paragraph example</h3>
+    <p>
+      The best Whitewater Rafting in Colorado, White Water Rafting Company
+      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
+      Springs. Since 1974, we have been family owned and operated, rafting the
+      Shoshone section of Glenwood Canyon and beyond.
+    </p>
+    <h3>Colored paragraph example</h3>
+    <p class="colored">
+      Trips vary from mild and great for families, to trips exclusively for
+      physically fit and experienced rafters. No matter what type of river
+      adventures you are seeking, White Water Rafting Company can make it
+      happen for you.
+    </p>
 
-<h3>Navigation</h3>
+    <!-- ------------------------Step 13------------------------------ -->
 
-<nav>
-<a href="#">Home</a>
-<a href="#">About Us</a>
-<a href="#">Trips</a>
-<a href="#">Contact Us</a>
-</nav>
+    <h3>Navigation</h3>
+    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Page2</a>
+      <a href="#">Contact Us</a>
+    </nav>
+    <hr />
+    <h2>Site Map</h2>
+    <div class="sitemap">
+      <div class="sm-home">Home</div>
+      <div class="sm-page2">
+        [Page2]
+        <!-- this page will have a name later -->
+      </div>
+      <div class="sm-page3">Contact Us</div>
 
-<h2>Wireframe</h2>
+      <div class="top">&nbsp;</div>
+      <div class="left">&nbsp;</div>
+      <div class="right">&nbsp;</div>
+    </div>
+    <hr />
+    <h2>Wireframes</h2>
+    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
-<h3>Home Page Wireframe</h3>
+    <h3>Home</h3>
 
-<img src="http://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Home Page Wireframe"width="700"/>
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-<h3>About Us Page Wireframe</h3>
+    <h3>[Page 2]</h3>
+    <img src="images/page2wireframe.png">
 
-<img src="https://byu-cse.github.io/wdd130-ww-course/image/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design"width="700">
-    </main>
-    <footer>
-        <p>@2024💦Rafting Site Document 💦 Prayer Marangwanda💦 WDD 130</p>
-    </footer>
+    <!-- <img src="#" alt="page 2 wireframe"> -->
+  </main>
 </body>
+
 </html>
