--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -55,7 +55,7 @@
             <a href="#">Trips</a>
             <a href="#">Contact Us</a>
         </nav>
-        <!-- I wanna try and find a more appealing color pallete but i could not remember how to get the links for color pallets and its late and i have work-->
+        
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
@@ -67,7 +67,7 @@
 
     <footer>
         <p>©️ 2024 Brigs Dean - Rafting Site Document - WDD130</p>
-    </footer>
-
+    </foot>
+    <!-- I should document how a project looks after it gets graded so if i make changes I can know what i did right and wrong when redoing said assignment-->
 </body>
 </html>
