--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
 
     <main>
         <section class="hero">
-            <img src="../wwr/images/rafting.jpg" alt="Rafting image" class="background-image">
+            <img src="../wwr/images/logo.png" alt="Rafting image" class="background-image">
             <h1>Whitewater Rafting</h1>
             <div class="moto">
                 <img src="../wwr/images/customer.png" alt="Happy customer">
