--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,12 +7,12 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Ariel Antequiera">
     <link rel="stylesheet" type="text/css" href="../wwr/styles/rafting.css">
-    <title>Whitewater Rafting About Us</title>
+    <title>Mean Dean About Us</title>
 </head>
 
 <body>
     <header class="aboutHeader">
-        <img src="/images/logo.png" alt="Whitewater Rafting Site Logo" class="logo">
+        <img src="/images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
         <nav class="aboutNavbar">
             <a href="./index.html">Home</a>
             <a href="./about.html">About Us</a>
