--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Ariel Antequiera">
-    <link rel="stylesheet" type="text/css" href="../wwr/styles/rafting.css">
+    <link rel="stylesheet" type="text/css" href="/wwr/styles/rafting.css">
     <title>Mean Dean About Us</title>
 </head>
 
