--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
-    <meta name="author" content="Ariel Antequiera">
+    <meta name="author" content="Brigs Dean">
     <link rel="stylesheet" type="text/css" href="/wwr/styles/rafting.css">
     <title>Mean Dean About Us</title>
 </head>
