--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -51,7 +51,7 @@
         <h3>Navigation</h3>
             <nav>
                 <a href="https://brigsdean.github.io/wdd130/">Home Page</a>
-                <a href="wwr/about.html">About Us</a>
+                <a href="about.html">About Us</a>
                 <a href="#">Trips</a>
                 <a href="#">Contact Us</a>
             </nav>
