--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" type="text/css" href="/wwr/styles/rafting.css">
+    <link rel="stylesheet" type="text/css" href="../wwr/styles/about.css">
     <title>Mean Dean About Us</title>
 </head>
 
@@ -23,16 +23,16 @@
 
     <main>
         <section class="hero">
-            <img src="../wwr/images/logo.png" alt="Rafting image" class="background-image">
-            <h1>Whitewater Rafting</h1>
+            <img src="images/logo.png" alt="Logo image" class="background-image">
+            <h1>Mean Dean Rafting</h1>
             <div class="moto">
                 <img src="../wwr/images/customer.png" alt="Happy customer">
                 <p>
-                    Navigate the Rapids, Ride the Thrills: Your Adventure Awaits! <br>
+                    Navigate the Rapids, Ride the Thrills: extreme Adventure Awaits! <br>
                     <br>
-                    Bringing the adventure to you!<br>
+                    Bringing the a to you!<br>
                     <br>
-                    Enjoy the best experiences on Whitewater Rafting!
+                    !
                 </p>
             </div>
         </section>
@@ -41,11 +41,8 @@
             <h2>History</h2>
             <div class="historyContent">
                 <p>
-                    Whitewater Rafting was born on 1962 as a way to bring amazing
-                    experiences to intrepid people and share our love for river
-                    rafting with everyone! We began offering guided trips on weekends
-                    as a small business, but quickly a lot of adventure-seekers come
-                    to us looking for new challenges.
+                    Mean Dean Rafting was founded in 2001 after out founder
+                    Throckmorton Dean was given $20 to let some college kids ride a barrel down
                 </p>
                 <img src="../wwr/images/raftinghistory.jpg" alt="rafting history">
                 <p>
