--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" type="text/css" href="../wwr/styles/about.css">
+    <link rel="stylesheet" type="text/css" href="wwr/styles/about.css">
     <title>Mean Dean About Us</title>
 </head>
 
@@ -30,9 +30,9 @@
                 <p>
                     Navigate the Rapids, Ride the Thrills: extreme Adventure Awaits! <br>
                     <br>
-                    Bringing the a to you!<br>
+                    Providing the adrenaline you crave!<br>
                     <br>
-                    !
+                    With more locations on the way the thrills will not cease
                 </p>
             </div>
         </section>
@@ -41,16 +41,15 @@
             <h2>History</h2>
             <div class="historyContent">
                 <p>
-                    Mean Dean Rafting was founded in 2001 after out founder
-                    Throckmorton Dean was given $20 to let some college kids ride a barrel down
+                    Mean Dean Rafting was founded in 2001 after our founder
+                    Throckmorton Dean was given $20 to let some college kids ride a barrel down A as of yet 
+                    unknown river with a waterfall suprise at the end!
                 </p>
                 <img src="../wwr/images/raftinghistory.jpg" alt="rafting history">
                 <p>
-                    Nowadays we are in ten countries, as one of the most
-                    internationally recognized adventure companies. We have this
-                    user-friendly website to allow our customers to book trips online,
-                    access detailed information about our rafting adventures and share
-                    their breathtaking photos and feedback.
+                    With 30+ (legal) locations we know we will have the thills you seek in atleast.
+                    one of our locations!
+                    we
                 </p>
             </div>
         </section>
@@ -82,7 +81,7 @@
     </main>
 
     <footer>
-        <p>©️ 2023 Ariel Antequiera - Whitewater Rafting - WDD130 // <a href="./images/wfabout.png">Wireframe</a></p>
+        <p>©️ 2024 Brigs Dean - Mean Dean Rafting - WDD130 // <a href="./images/wfabout.png">Wireframe</a></p>
         <nav class="sociallinks">
             <a href="https://www.facebook.com" target="_blank">
                 <img src="./images/facebook.webp" alt="Facebook">
