--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,24 +57,12 @@
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="../wwr/images/1.jpg" alt="Los Dientes del Diablo">
-                <figcaption>Los Dientes del Diablo</figcaption>
+                <img src="../wwr/images/river.png" alt="river 1 ">
+                <figcaption>Super Danger Creek</figcaption>
             </figure>
             <figure>
-                <img src="../wwr/images/2.jpg" alt="Big Mallard">
-                <figcaption>Big Mallard</figcaption>
-            </figure>
-            <figure>
-                <img src="../wwr/images/4.jpg" alt="Wild Rapids Expedition">
-                <figcaption>Wild Rapids Expedition</figcaption>
-            </figure>
-            <figure>
-                <img src="../wwr/images/3.jpg" alt="Half Day Adventure">
-                <figcaption>Half Day Adventure</figcaption>
-            </figure>
-            <figure>
-                <img src="../wwr/images/5.jpg" alt="River Bliss Retreat">
-                <figcaption>River Bliss Retreat</figcaption>
+                <img src="../wwr/images/river2.png" alt="river 2">
+                <figcaption>Big Dean's Beginner thrill </figcaption>
             </figure>
         </section>
 
