--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,11 +57,11 @@
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
             <figure>
-                <img src="../wwr/images/river.png" alt="river 1 ">
+                <img src="images/river.png" alt="river 1 ">
                 <figcaption>Super Danger Creek</figcaption>
             </figure>
             <figure>
-                <img src="../wwr/images/river2.png" alt="river 2">
+                <img src="images/river2.png" alt="river 2">
                 <figcaption>Big Dean's Beginner thrill </figcaption>
             </figure>
         </section>
