--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
-    <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
+    <link type="text/css" rel="stylesheet" href="styles/about.css">
     <title>Mean Dean About Us</title>
 </head>
 
