--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="aboutHeader">
-        <img src="/images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
+        <img src="images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
         <nav class="aboutNavbar">
             <a href="./index.html">Home</a>
             <a href="./about.html">About Us</a>
@@ -32,7 +32,7 @@
                     <br>
                     Providing the adrenaline you crave!<br>
                     <br>
-                    With more locations on the way the thrills will not cease
+                    With more locations on the way the thrills will not cease test
                 </p>
             </div>
         </section>
