--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,89 +1,73 @@
+<!--Last modified date April 1, 2023-->
 <!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Us page">
-    <meta name="author" content="Brigs Dean">
-    <link rel="stylesheet" href="styles/about.css">
-    <title>Mean Dean About Us</title>
-</head>
-
-<body>
-    <header class="aboutHeader">
-        <img src="images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
-        <nav class="aboutNavbar">
-            <a href="./index.html">Home</a>
-            <a href="./about.html">About Us</a>
-            <a href="./trips.html">Trips</a>
-            <a href="./contact.html">Contact Us</a>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero">
-            <img src="images/logo.png" alt="Logo image" class="background-image">
-            <h1>Mean Dean Rafting</h1>
-            <div class="moto">
-                <img src="../wwr/images/customer.png" alt="Happy customer">
-                <p>
-                    Navigate the Rapids, Ride the Thrills: extreme Adventure Awaits! <br>
-                    <br>
-                    Providing the adrenaline you crave!<br>
-                    <br>
-                    With more locations on the way the thrills will not cease test
-                </p>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="For About Us page: About Us- our Mission and purpose of the Mike Rafting Company Limited, our history and images">
+        <meta name="author" content="Michael David Innocent">
+        <title>About us | Mike Rafting Company Limited</title>
+        <link rel="stylesheet" href="styles/rafting.css">
+    </head>
+    <body>
+        <div class="grid">
+            <header>
+                <img src="images/logo.png" alt="Rafting Site Logo" width="100">
+                <nav>
+                    <a href="index.html" target="_blank">Home</a>
+                    <a href="about.html" target="_blank">About Us</a>
+                    <a href="trips.html" target="_blank">Trips</a>
+                    <a href="contact.html" target="_blank">Contact Us</a>  
+                </nav>
+            </header>
+        </div>
+        <main>
+            <div class="hero">
+                <img src="images/background.jpeg" alt="Hero Image" class="hero-image" width="2000">
+                <h1 class="hero-title">Mike Rafting Company Limited</h1>
+                <article class="hero-article">
+                    <h2 class="article-healding" style="width: 100%;">Here is Our Mission Purpose</h2>
+                    <img src="images/happy.png" alt="Article Image" class="article-image">
+                    <p>Our purpose is to provide customer with an amazing and memorable both in, and outdoor experience
+                        by help to offering guidiance rafting tripe on rivers.</p>
+                </article>
             </div>
-        </section>
-
-        <section class="history">
-            <h2>History</h2>
-            <div class="historyContent">
-                <p>
-                    Mean Dean Rafting was founded in 2001 after our founder
-                    Throckmorton Dean was given $20 to let some college kids ride a barrel down A as of yet 
-                    unknown river with a waterfall suprise at the end!
-                </p>
-                <img src="../wwr/images/raftinghistory.jpg" alt="rafting history">
-                <p>
-                    With 30+ (legal) locations we know we will have the thills you seek in atleast.
-                    one of our locations!
-                    we
-                </p>
-            </div>
-        </section>
-
-        <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <figure>
-                <img src="images/river.png" alt="river 1 ">
-                <figcaption>Super Danger Creek</figcaption>
-            </figure>
-            <figure>
-                <img src="images/river2.png" alt="river 2">
-                <figcaption>Big Dean's Beginner thrill </figcaption>
-            </figure>
-        </section>
-
-    </main>
-
-    <footer>
-        <p>©️ 2024 Brigs Dean - Mean Dean Rafting - WDD130 // <a href="./images/wfabout.png">Wireframe</a></p>
-        <nav class="sociallinks">
-            <a href="https://www.facebook.com" target="_blank">
-                <img src="./images/facebook.webp" alt="Facebook">
-            </a>
-
-            <a href="https://www.twitter.com" target="_blank">
-                <img src="./images/twitter.webp" alt="Twitter">
-            </a>
-
-            <a href="https://www.instagram.com" target="_blank">
-                <img src="./images/instagram.webp" alt="Instagram">
-            </a>
-        </nav>
-    </footer>
-</body>
-
+            <br><br>
+            <section class="se">
+                <h2>HISTORY</h2>
+                    <div class="di">
+                        <p style="font-size: small;">The Mike Rafting Company Limited was founded in 1995 by Mike: when i was little i enjoy rafting, which as grown on me and i have use the privilege to grown my company. I spent most of my time on river when i was in childhood</p>
+                        <img src="images/premium_photo-1661889228398-fd1a6b81e38d.avif" alt="Article Image" width="200">
+                        <p  style="font-size: small;">Today Mike Rafting company Limited as be known all over the world, where millions of people invested in, enjoy trips event with there families, i ask you to come and see and enjoy best moment of your life</p>
+                    </div>
+            </section>
+            <br><br>
+            <section class="se">
+                <h2>ADVENTURE AWAITS YOU!</h2>
+                <div class="image-grid">
+                    <figure class="adventure"><img src="images/1.jpeg" alt="Adventure" width="200"><figcaption>Pading</figcaption></figure>
+                    <figure class="adventure"><img src="images/2.jpeg" alt="Adventure" width="200"><figcaption>Rush</figcaption></figure>
+                    <figure class="adventure"><img src="images/3.jpeg" alt="Adventure" width="200"><figcaption>seeking</figcaption></figure>
+                    <figure class="adventure"><img src="images/4.jpeg" alt="Adventure" width="200"><figcaption>Mallard</figcaption></figure>
+                   <figure class="adventure"> <img src="images/5.jpeg" alt="Adventure" width="200"><figcaption>Rapid</figcaption></figure>
+                </div>
+            </section>
+        </main>
+        <br><br>
+        <footer>
+            <p style="font-size: small;">copyright ©2023 🌳 Mike Rafting Company Limited 🌳 Michael David Innocent | WDD 130 | All Right Reserved</p>
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.webp" alt="Facebook" width="25">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/Twitter.webp" alt="Twitter" width="25">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/Instagram.webp" alt="Instagram" width="25">
+                </a>
+                <a href="abou.html">About wireframe</a>
+            </nav>
+        </footer>
+    </body>
 </html>
