--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="For About Us page: About Us- our Mission and purpose of the Mike Rafting Company Limited, our history and images">
         <meta name="author" content="Michael David Innocent">
         <title>About us | Mike Rafting Company Limited</title>
-        <link rel="stylesheet" href="styles/rafting.css">
+        <link rel="stylesheet" href="styles/about.css">
     </head>
     <body>
         <div class="grid">
