--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
     <header class="aboutHeader">
         <img src="images/logo.png" alt="Mean Dean Rafting Site Logo" class="logo">
         <nav class="aboutNavbar">
-            <a href="./index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="./about.html">About Us</a>
             <a href="./trips.html">Trips</a>
             <a href="./contact.html">Contact Us</a>
