--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="About Us page">
     <meta name="author" content="Brigs Dean">
     <link rel="stylesheet" href="styles/about.css">
-    <title>Mean Dean About Us</title>
+    <title>Mean Rafting Dean About Us</title>
 </head>
 
 <body>
