--- a/wwr/about.html
+++ b/wwr/about.html
@@ -41,7 +41,7 @@
                     Throckmorton Dean was given $20 to let some college kids ride a barrel down An as of yet 
                     unknown river with a waterfall suprise at the end!
                 </p>
-                <img src="../wwr/images/raftinghistory.jpg" alt="rafting history">
+                <img src="../wwr/images/raftinghistory.jpg" alt="Definitly not ai generated art">
                 <p>
                     With 30+ (legal) locations we know we will have the thills you seek in atleast.
                     one of our locations!
