--- a/wwr/about.html
+++ b/wwr/about.html
@@ -59,6 +59,10 @@
                 <img src="images/river2.png" alt="river 2">
                 <figcaption>Big Dean's Beginner thrill </figcaption>
             </figure>
+            <figure>
+                <img src="images/river3.png" alt="river 2">
+                <figcaption>The Throngler </figcaption>
+            </figure>
         </section>
 
     </main>
@@ -71,7 +75,7 @@
             </a>
 
             <a href="https://www.twitter.com" target="_blank">
-                <img src="./images/twitter.webp" alt="Twitter">
+                <img src="./images/twitter.webp" alt=" X (formally twitter)">
             </a>
 
             <a href="https://www.instagram.com" target="_blank">
