--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/site-plan-rafting.html">Rafting Website</a>
+            <a href="quiz.html">quiz Website</a>
             <a href="https://facebook.com">Facebook</a>
             <a href="https://linkedin.com">Linkedin</a>
         </nav>
