--- a/quiz.html
+++ b/quiz.html
@@ -17,26 +17,26 @@
                     <fieldset>
                         <div class="form-items1"> 
                             <label> 
-                                1. What is the file extension of an HTML file?
+                                1. What is the format for leaving a note in html code?
                                 <input type="text" name="q1"  id="q1">
                             </label>                                                                               
                         </div>
                         <div class="form-item1">                           
                             <label>
-                               2. What are the three elements of an HTML file?                            
+                               2. What are the elements of an html file?                            
                             <textarea id="q2" name="q2" rows="3"></textarea>
                             </label>                       
                         </div>
                         <div class="form-items2">                          
                             <label>                                
-                                3. Which of the following is a property that controls layout in CSS?
+                                3. Which of the following combonations of th and td is correct?
                             </label>
                             <select id="q3" name="q3">                              
-                            <option value="" selected disabled>Choose One...</option>                  
-                            <option value="grid">grid</option>
-                            <option value="display">display</option>
-                            <option value="form">form</option>
-                            <option value="form">justify</option>
+                            <option value="" selected disabled>Choose One.</option>                  
+                            <option value="grid">th, td</option>
+                            <option value="display">th td</option>
+                            <option value="form">th=td</option>
+                            <option value="form">td, th</option>
                             </select>                            
                         </div>
                         <div class="form-items2">                        
